2015-09-04  James Bowman  <james.bowman@ftdichip.com>

	* configure.in: Add ft32 support.
	* ft32/sbrk.c: New file.
	* ft32/sim-close.S: Ditto.
	* ft32/sim-exit.S: Ditto.
	* ft32/sim-inbyte.c: Ditto.
	* ft32/sim.ld: Ditto.
	* ft32/sim-lseek.c: Ditto.
	* ft32/sim-lseek.S: Ditto.
	* ft32/sim-open.S: Ditto.
	* ft32/sim-read.S: Ditto.
	* ft32/sim-time.c: Ditto.
	* ft32/sim-unlink.S: Ditto.
	* ft32/sim-write.S: Ditto.
	* ft32/stat.c: Ditto.
	* ft32/configure.in: Ditto.
	* ft32/crt0.S: Ditto.
	* ft32/fstat.c: Ditto.
	* ft32/getpid.c: Ditto.
	* ft32/isatty.c: Ditto.
	* ft32/kill.c: Ditto.
	* ft32/Makefile.in: Ditto.

2015-08-20  Nick Clifton  <nickc@redhat.com>

	PR libgloss/18786
	* msp430/crt0.S: Remove watchdog disabling code.

2015-08-07 Stefan Wallentowitz <stefan.wallentowitz@tum.de>

	* or1k/boards/optimsoc.S: Fix symbol name
	* or1k/crt0.S: Remove paranthesis

2015-08-07 Stefan Wallentowitz <stefan.wallentowitz@tum.de>

	* or1k/crt0.S: Add exception nesting
	* or1k/exceptions-asm.S: ditto
	* or1k/util.c: ditto

2015-08-07 Stefan Wallentowitz <stefan.wallentowitz@tum.de>

	* or1k/sbrk.c: Make heap end globally visible

2015-08-04  Nick Clifton  <nickc@redhat.com>

	* rl78/rl78-sim.ld: Provide a value for __rl78_abs__.
	* rl78/rl78.ld: Likewise.

2015-07-14  Andre Vieira  <andre.simoesdiasvieira@arm.com\>

	* arm/elf-nano.specs: Added option to search for system headers in
	newlib-nano directory.

2015-05-26  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/impure.c: Fix initialization of impure ptr

2015-05-26  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/boards/optimsoc.S: Heap for gzll kernel

2015-05-26  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/sbrk.c: Allow for different heap start

2015-05-26  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/or1k_uart.c: Fix interrupts

2015-05-26  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/timer.c: Properly set interrupt flags
