@@ -1,3 +1,10 @@
+2015-10-06  Nick Clifton  <nickc@redhat.com>
+
+	* msp430/msp430-sim.ld: Add .persistent section.
+	Tidy up section layout.
+	Start RAM above hardware multiply registers.
+	* msp430/msp430xl-sim.ld: Likewise.
+
 2015-09-04  James Bowman  <james.bowman@ftdichip.com>
 
 	* configure.in: Add ft32 support.
